<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/Superior"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/Inferior"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/Logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:contentDescription="app logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo" />

        <ImageView
            android:id="@+id/Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:contentDescription="@string/app_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/securephone" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/Inferior"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/Correo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/LabelCorreo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:maxWidth="48dp"
                android:minWidth="48dp"
                android:text="@string/LabelCorreo"
                android:textAlignment="textEnd" />

            <EditText
                android:id="@+id/CorreoField"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:background="@drawable/formfield"
                android:ems="10"
                android:inputType="text"
                android:text="Correo" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/Contrasena"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/LabelContrasena"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:maxWidth="48dp"
                android:minWidth="48dp"
                android:text="@string/LabelContrasena"
                android:textAlignment="textEnd" />

            <EditText
                android:id="@+id/ContrasenaField"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:background="@drawable/formfield"
                android:ems="10"
                android:inputType="text"
                android:text="Contraseña" />

        </LinearLayout>

        <CheckBox
            android:id="@+id/RecuerdameCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:text="Recuerdame" />

        <LinearLayout
            android:id="@+id/Opciones"
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/BtnIniciarSesion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/color_primary_buttons"
                android:elevation="50dp"
                android:onClick="cambiarPantallaInicio"
                android:text="@string/LabelBtnIniciarSesion" />

            <Button
                android:id="@+id/BtnRegistrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/color_secundary_buttons"
                android:elevation="32dp"
                android:onClick="cambiarPantallaRegistrar"
                android:text="@string/LabelBtnRegistrarse" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/OpcionesAlternas"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/BtnFacebook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="@color/color_primary_buttons"
                android:elevation="32dp"
                android:onClick="cambiarPantallaInicio"
                android:text="@string/LabelBtnFacebook"
                app:icon="@drawable/logofacebook" />

            <Button
                android:id="@+id/BtnGoogle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="@color/color_primary_buttons"
                android:elevation="32dp"
                android:onClick="cambiarPantallaInicio"
                android:text="@string/LabelBtnGoogle"
                app:icon="@drawable/logogoogle" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

